--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <h1>Hello World from Kingram</h1>
-
+    
+<h1>Hello World from Kingram</h1>
 
 </head>
 
 <body>
-Hi guys, don't mind me just learning how to use node and express
+Hi guys, don't mind me just learning how to use node and express. While you are here I may as well tell you my ennegram type. Which is type 5 the investigator
 
 </body>
 </html>
