--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-Hi guys, don't mind me just learning how to use node and express. While you are here I may as well tell you my ennegram type. Which is type 5 the investigator
+Hi guys, don't mind me just learning how to use node and express. While you are here I may as well tell you my ennegram type. Which is type 5 The Investigator!
 
 </body>
 </html>
